@@ -13,20 +13,29 @@
     <a name="unix"></a>
     <h2>Unix Systems (FreeBSD, Linux, Mac OS X)</h2>
     <p>
-      To build the library, you will need a working C++ compiler (gcc ver. 3.x or 4.x will be OK; other compilers have not been tested) and
-    the make utility. No other libraries or utilities are required.</p>
+      To build the library, you will need a working C++ compiler (gcc ver. 3.x or 4.x will be OK; other compilers have
+      not been tested) and the make utility. No other libraries or utilities are required.</p>
     <p>
       LibRaw has been tested on 32- and 64-bit Unix systems working on x86- (and AMD64-) compatible processors. 
       Building and work on other architectures have not been tested.
     </p>
     <h3>Compilation of Library and Examples</h3>
     <p>
-     Unpack the downloaded distribution package, go to the resultant folder and run make:
+     Unpack the downloaded distribution package. If you wish to use LibRaw-demosaic-pack(s), unpack these archives
+      too:
     </p>
     <pre>
         tar xzvf LibRaw-X.YY.tar.gz
-        cd  LibRaw-X.YY
-        make
+        tar xzvf LibRaw-demosaic-pack-GPL2-X.YY.tar.gz
+        tar xzvf LibRaw-demosaic-pack-GPL3-X.YY.tar.gz
+        tar xzvf LibRaw-X.YY.tar.gz
+    </pre>
+    <p>Go to LibRaw directory and run <b>./configure</b> and <b>make</b>:
+    </p>
+    <pre>
+cd LibRaw-X.YY
+./condigure # with optional args
+make
     </pre>
     <p>As a result, you will compile</p>
     <ul>
@@ -40,18 +49,80 @@
     </ul>
     <h3>Build parameters</h3>
     <p>
-      If you wish to override build parameters (OpenMP support, LCMS support) or installation paths, you
-      can use <b>./configure</b> script. Run ./configure -h for script parameters help.
+      ./configure script have some non-standard parameters:
+    </p>
+    <dl>
+      <dt>
+        --enable-openmp<br/>
+        --disable-openmp
+      </dt>
+      <dd>
+        Enable/disable OpenMP support if compiler supports it.
+        OpenMP is enabled by default.
+      </dd>
+      <dt>
+        --enable-lcms<br/>
+        --disable-lcms
+        </dt>
+      <dd>
+        Enable/disable LCMS color engine support. If enabled, ./configure will try to 
+        find lcms library.  Both LCMS-1.x and LCMS-2.x are supported
+        LCMS support is enabled by default
+        </dd>
+      <dt>
+        --enable-examples<br/>
+        --disable-examples
+      </dt>
+      <dd>
+        Enables/disables examples compilation and installation. Enabled by default
+      </dd>
+      <dt>
+        --enable-demosaic-pack-gpl2<br/>
+        --enable-demosaic-pack-gpl2=FOLDERNAME<br/>
+        --enable-demosaic-pack-gpl2=no<br/>
+        --disable-demosaic-pack-gpl2
+      </dt>
+      <dd>
+        Enables/disables support of additional demosaic methods licensed under GPL2
+        You need to download and unpack LibRaw-demosaic-pack-GPL2 archive to use 
+        this feature.<br/>
+        ./configure will try to find demosaic pack in:
+        <ul>
+          <li>If folder is specified via  --enable-demosaic-pack-gpl2=FOLDERNAME 
+            command-line option, then only this folder will be checked.
+            </li>
+          <li>If no folder is specified in --enable-demosaic-pack-gpl2 switch:
+            <ul>
+              <li>./LibRaw-demosaic-pack-GPL2 (in LibRaw folder)</li>
+              <li>../LibRaw-demosaic-pack*GPL2* - upper level folder</li>
+            </ul>
+            If several ../LibRaw-demosaic-pack*GPL2* folders exists in upper level 
+            catalog, then ./configure will NOT use any of them due of ambiguity.
+            Specify exact folder name in this case using
+            --enable-demosaic-pack-gpl2=FOLDERNAME
+            </li>
+          </ul>
+      </dd>
+      <dt>
+        --enable-demosaic-pack-gpl3<br/>
+        --enable-demosaic-pack-gpl3=FOLDERNAME<br/>
+        --enable-demosaic-pack-gpl3=no<br/>
+        --disable-demosaic-pack-gpl3
+      </dt>
+      <dd>
+        Same as above, but for GPL3-licensed demosaic pack.
+      </dd>
+    </dl>
     <h3>Installation and Usage</h3>
     <p>To install the library, run</p>
     <pre>
-    make install
+    sudo make install
     </pre>
     <p>
-    It will place the libraries in <b>/usr/local/lib</b>, the include-files in <b>/usr/local/include</b> (subfolder of
+      It will place the libraries in <b>/usr/local/lib</b>, the include-files in <b>/usr/local/include</b> (subfolder of
       libraw) and LibRaw samples to <b>/usr/local/bin</b>. You can override installation path by using
       ./configure script.
-    <br/>
+      <br/>
       To use LibRaw, add the following parameters to the compiler call (when building your own projects):
     </p>
     <ul>
@@ -111,7 +182,7 @@
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 11:53:43 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Sun Sep  5 18:31:32 MSD 2010
+Last modified: Fri Nov 19 20:07:01 UTC 2010
 <!-- hhmts end -->
   </body>
 </html>
