@@ -26,7 +26,7 @@ it under the terms of the one of three licenses as you choose:
 #define LIBRAW_MAJOR_VERSION  0
 #define LIBRAW_MINOR_VERSION  12
 #define LIBRAW_PATCH_VERSION  0
-#define LIBRAW_VERSION_TAIL   alpha2
+#define LIBRAW_VERSION_TAIL   Beta1
 
 #define _LIBRAW_VERSION_MAKE(a,b,c,d) #a"."#b"."#c"-"#d
 #define LIBRAW_VERSION_MAKE(a,b,c,d) _LIBRAW_VERSION_MAKE(a,b,c,d)
